--- a/public/emailConfirmation.html
+++ b/public/emailConfirmation.html
@@ -35,12 +35,8 @@
 </head>
 <body>
     <div class="login-form">
-        <h1>Login Form</h1>
-        <form action="auth" method="POST">
-            <input type="text" name="username" placeholder="Place Name" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="submit">
-        </form>
+        <h1>Confirm Your Email</h1>
+        <input type="button" name="confirm" placeholder="Confirm">
     </div>
 
     <img id="qrcodeImg"></img>
