--- a/public/list.html
+++ b/public/list.html
@@ -35,12 +35,8 @@
 </head>
 <body>
     <div class="login-form">
-        <h1>Login Form</h1>
-        <form action="auth" method="POST">
-            <input type="text" name="username" placeholder="Place Name" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="submit">
-        </form>
+        <h1>Lista Tavoli</h1>
+        
     </div>
 
     <img id="qrcodeImg"></img>
